crates/rome_cli/tests/snapshots/main_commands_init/init_help.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Emitted Messages

```block
Bootstraps a new rome project. Creates a configuration file with some defaults.

Usage: no parameters expected

Available options:
    -h, --help  Prints help information

```


